Fix layout gaps

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -143,17 +143,39 @@ h6, .h6 {
   margin-right: 6px;
 }
 
-#secondary-2 h1.widget-title {
-  padding: 5px 0;
+
+#secondary h1.widget-title, #secondary-2 h1.widget-title {
+  box-shadow: 1px 1px 2px #aaa;
+  padding: 3px 0 7px 5px;
   background: #3a8cbb;
+  margin: 0 0 10px;
 }
 
-#secondary-2 h1.widget-title span {
-  padding: 10px;
-  margin-top: 0px;
+#secondary h1.widget-title span, #secondary-2 h1.widget-title span {
+  padding-left: 10px;
   font-size: 22px;
   color: #fff;
-  margin-bottom: 20px;
+  text-align: right;
+}
+
+@media screen and (min-width: 769px) {
+  #secondary-2 h1.widget-title, #secondary h1.widget-title {
+    margin-right: -10px;
+    margin-left: -10px;
+    padding-left: 15px;
+  }    
+}
+
+@media screen and (min-width: 992px) {
+  #secondary h1.widget-title {
+    margin-right: -25px;
+    margin-left: -15px;
+    padding-left: 5px;
+  }
+  
+  #secondary-2 h1.widget-title {
+    padding-left: 5px;
+  }
 }
 
 #menu-beliebt {
@@ -198,16 +220,6 @@ h6, .h6 {
   box-shadow: 0 1px 2px #aaa;
 }
 
-#secondary-2 h1.widget-title {
-  padding-left: 5px;
-  box-shadow: -1px 1px 2px #aaaaaa;
-}
-
-#secondary-2 h1.widget-title:first-child {
-  margin-top: 0px;
-  margin-left: -9px;
-}
-
 #secondary-2 .widget_search label {
   margin-left: 5%;
 }
@@ -223,23 +235,14 @@ h6, .h6 {
   box-shadow: 0 1px 2px #aaa;
 }
 
-#secondary-2 h1.widget-title {
-  padding-left: 5px;
-  box-shadow: -1px 1px 2px #aaaaaa;
-}
 
-#secondary-2 h1.widget-title:first-child {
-  margin-top: 0px;
-  margin-left: -9px;
-  margin-right: -15px;
-}
 
 #secondary-2 .widget_search label {
   margin-left: 5%;
 }
 
 /* mobile view */
-#secondary-2 ul.sub-menu {
+#secondary-2 ul.sub-menu, #menu-beliebt {
   column-count: 2;
   list-style-position: inside;
 }
@@ -250,14 +253,14 @@ h6, .h6 {
 
 /* tablet view */
 @media screen and (min-width: 568px) {
-  #secondary-2 ul.sub-menu {
+  #secondary-2 ul.sub-menu, #menu-beliebt {
     column-count: 3;
   }
 }
 
 /* screen view */
 @media screen and (min-width: 992px) {
-  #secondary-2 ul.sub-menu {
+  #secondary-2 ul.sub-menu, #menu-beliebt {
     column-count: 1;
     list-style-position: outside;
   }
@@ -291,3 +294,8 @@ h6, .h6 {
 .entry-content .content-table-3 {
   padding: 0 0 0 20px;
 }
+
+
+/* #top-bar .top-right-search {
+  display: none;
+} */
